objects/JBCXM__Survey__c.object
<CustomObject>
    <description>This is used to survey  main attributes</description>
    <fields>
        <fullName>JBCXM__AnonymousAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Anonymous Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__AnonymousTokenId__c</fullName>
        <label>Anonymous Token</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AnonymousType__c</fullName>
        <label>Anonymous Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectFieldLabel__c</fullName>
        <label>Associated object field label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectFieldName__c</fullName>
        <label>Associated object field API name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectLabel__c</fullName>
        <label>Associated object label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectName__c</fullName>
        <label>Associated object API name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectRelatedField__c</fullName>
        <label>Associated object storage field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AssociatedObjectSource__c</fullName>
        <label>Associated object source</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__BouncesCaptureEmail__c</fullName>
        <label>Bounces Capture Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>JBCXM__CampaignId__c</fullName>
        <description>This field is used to store the campaign Id for external services eg : Marketo</description>
        <label>CampaignId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Code__c</fullName>
        <label>Code</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerDistributionCount__c</fullName>
        <label>Customer Distribution Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerReponsecount__c</fullName>
        <label>Customer Reponse count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__DaysToAutoSubmit__c</fullName>
        <description>After this many days partially saved responses will get automatically submitted.</description>
        <label>Days To Auto Submit</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Description__c</fullName>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__EmailBody__c</fullName>
        <label>Email Body</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__EmailOpenURL__c</fullName>
        <label>EmailOpenURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__EmailService__c</fullName>
        <label>EmailService</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__EmailSubject__c</fullName>
        <label>Email Subject</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__EmailTemplate__c</fullName>
        <description>This represent the Email Template.</description>
        <label>Email Template</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <defaultValue>&quot;ACCOUNT&quot;</defaultValue>
        <label>EntityType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ExtTitle__c</fullName>
        <label>Enternal Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__FooterMessge__c</fullName>
        <label>FooterMessge</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__HasAssociatedObject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Associated object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__HeaderLogo__c</fullName>
        <label>HeaderLogo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__HidePublishDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Publish Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__HonourDateRestrictions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to honour start date and end date</description>
        <label>Honour Date Restrictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__InternalSubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsAnonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsExpired__c</fullName>
        <formula>IF(OR(ISPICKVAL(JBCXM__Status__c,&quot;Closed&quot;),(AND(IF(JBCXM__EndDate__c&lt;TODAY(),true, false),JBCXM__HonourDateRestrictions__c==true))), true, false)</formula>
        <label>Is Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsExternalParticipant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExternalParticipant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsLib__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Library</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsPublished__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(JBCXM__PublishDate__c)), JBCXM__IsExpired__c==false), true, false)</formula>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsRecurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsTranslation__c</fullName>
        <formula>NOT(ISBLANK(JBCXM__TranslationFor__c))</formula>
        <label>Is Survey Translation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Language</description>
        <label>Language</label>
        <referenceTo>JBCXM__GSLanguage__c</referenceTo>
        <relationshipLabel>Survey Language</relationshipLabel>
        <relationshipName>SurveyLanguage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__LastSyncDate__c</fullName>
        <label>Last sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__LinkExpireDays__c</fullName>
        <description>Number of days survey link will be valid. Expiry will be calculated based on survey sent date.</description>
        <label>Survey Link Expire Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__MetaData__c</fullName>
        <label>Meta Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Owner__c</fullName>
        <label>Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ParticipantMapping__c</fullName>
        <label>ParticipantMapping</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ParticipantRules__c</fullName>
        <label>Participant Rules</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__PublishDate__c</fullName>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__PublishedURL__c</fullName>
        <description>This represents the site URL to publish the survey.</description>
        <label>Published URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SendAddress__c</fullName>
        <label>Send Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Publish</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>ReOpened</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyOwner__c</fullName>
        <label>Survey Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ThankyouCustom__c</fullName>
        <description>Enter custom URL or Custom page</description>
        <inlineHelpText>Enter custom URL or Custom page</inlineHelpText>
        <label>Thankyou Custom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ThankyouMessage__c</fullName>
        <label>Thank you Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ThankyouType__c</fullName>
        <description>It shows the user to select different type of thank you types(Like custom page, custom Url, or thank you message).</description>
        <label>Thankyou Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__TranslationFor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transation for</label>
        <referenceTo>JBCXM__Survey__c</referenceTo>
        <relationshipLabel>Translation For</relationshipLabel>
        <relationshipName>SurveyTranslations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__UserResponseCount__c</fullName>
        <label>User Response Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__UsersDistributionCount__c</fullName>
        <label>Users Distribution Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__UsersSentCount__c</fullName>
        <label>Users Sent Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__WelcomeMessage__c</fullName>
        <label>Welcome Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Survey</label>
    <nameField>
        <displayFormat>Su-{00000}</displayFormat>
        <label>Survey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>